[project]
name = "exasol-script-languages-container-tool"
version = "3.6.1"
requires-python = ">=3.10,<3.14"
description = "Script Languages Container Tool"
keywords = ['exasol', 'udf', 'script-languages']

readme = 'README.rst'
license = "MIT"

authors = [
    { name = "Torsten Kilias", email = "Torsten Kilias <torsten.kilias@exasol.com>" },
    { name = "Thomas Uebensee", email = "Thomas Uebensee <ext.thomas.uebensee@exasol.com>"}
]

dependencies = [
    "networkx (>=3.3.0,<4)",
    "exasol-integration-test-docker-environment (>=6.1.0,<7)",
    "exasol-bucketfs (>=2.1.0,<3)",
    "pydantic (>=2.10.2, <3)",
    "jsonschema (>=4.23.0, <5)",
    "click (>=8.2.1, <9)",
    "pandas (>=2.2.3, <3)",
    "tabulate (>=0.9.0, <1)",
    "exasol-script-languages-package-management (>=1.0.0, <2)"
]

[tool.poetry]

requires-poetry = ">=2.3.0"

packages = [
    {include = "README.rst"},
    {include = "LICENSE"},
    {include = "exasol"},
]


[project.urls]
repository = "https://github.com/exasol/script-languages-container-tool"
homepage = "https://github.com/exasol/script-languages-container-tool"
documentation = "https://github.com/exasol/script-languages-container-tool"
source = "https://github.com/exasol/script-languages-container-tool"
issues = "https://github.com/exasol/script-languages-container-tool/issues"


[build-system]
requires = ["poetry_core>=2.0.0"]
build-backend = "poetry.core.masonry.api"


[dependency-groups]

dev = [
    "toml>=0.10.2",
    "configobj (>=5.0.8)",
    "exasol-toolbox (>=5.1.1, <6.0.0)",
    "aiohttp (>=3.12.7, <4)",
    "tqdm (>=4.67.1, <5)",
    "pyexasol (>=1.3.0, <2)",
    "pytest-exasol-backend (>=1.2.2, <2)",
    "pandas-stubs (>=2.2.3, <3)",
    ]


[tool.poetry.scripts]
exaslct = 'exasol.slc.tool.main:main'


[tool.pytest.ini_options]
minversion = "6.0"

testpaths = [
    "test"
]

[[tool.mypy.overrides]]
module = ["luigi.*", "docker.*", "humanfriendly", "configobj", "toml", "tqdm", "exasol_python_test_framework", "exasol.*"]
ignore_missing_imports = true


[tool.ruff.lint]
extend-ignore = [
    "E", # Syntax errors
    "F", # Pyflakes rules (excluding F401)
    "UP", # pyupgrade rules
    "D", # Docstring rules
]
extend-select = ["F401"]
unfixable = []

[tool.black]
line-length = 88
verbose = false
include = "\\.pyi?$"

[tool.isort]
profile = "black"

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
disable = """
    W,R,C,
    duplicate-code,
    missing-class-docstring,
    missing-module-docstring,
    missing-function-docstring,
    too-many-ancestors,
    broad-exception-raised,
    broad-exception-caught,
    consider-using-f-string,
    useless-parent-delegation
"""


[tool.sonar]
projectKey = "com.exasol:script-languages-container-tool"
hostUrl = "https://sonarcloud.io"
organization = "exasol"
